feat: Adicionando melhorias no dashboardantes de mexer no pdf da proposta
